--- a/frontend-01blog/src/app/app.component.html
+++ b/frontend-01blog/src/app/app.component.html
@@ -1,39 +1,37 @@
 <div class="container">
-  <header>
-    <h1>{{ title() }}</h1>
-    <nav>
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+  <h1>{{ title() }}</h1>
 
-  <main>
-    <div class="post" *ngFor="let post of posts()">
-      <div class="post-title">{{ post.title }}</div>
-      <div class="post-date">{{ post.date }}</div>
-      <div class="post-content">{{ post.content }}</div>
+  <div *ngIf="!loggedIn()">
+    <div class="auth-container">
+      <h2>Register</h2>
+      <form (ngSubmit)="register()">
+        <input type="text" placeholder="Username" [(ngModel)]="username" name="username" required>
+        <input type="password" placeholder="Password" [(ngModel)]="password" name="password" required>
+        <button type="submit">Register</button>
+      </form>
     </div>
-  </main>
-  <pre>
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⡰⡇⠁⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠰⢾⠇⠨⡦⠀⠂⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⡀⠀⢈⣹⠜⠻⢾⠃⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠁⢠⣿⡵⠾⣻⣶⠿⠦⠀⠀⠀⠀⠀⠀
-⠀⠀⠀⠀⢀⠀⢀⣠⣮⣦⡶⠻⠛⢶⣄⡀⠁⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⢀⣽⠏⠁⣠⣂⣦⣈⣝⣦⣄⠀⠈⠁⠀
-⠀⠀⠀⠀⠁⣠⣾⣵⣾⣾⠟⡙⠟⠿⣍⡉⠀⠀⠆⠀⠀
-⠀⠰⠀⠀⠄⣠⣶⣾⣭⡶⠟⠻⣶⡰⣜⣳⣦⣄⠀⡀⠀
-⠀⠀⠀⢀⣠⣴⣿⣋⡴⣪⠎⣄⡙⠻⠿⣯⣉⠉⠀⠀⠀
-⠀⠂⠀⢀⣉⡭⢿⡛⣛⣵⠎⠀⠙⢾⣶⣦⣭⣷⣦⠐⠀
-⠀⠀⢈⣙⣿⡿⠿⠟⣋⢅⡄⡄⡐⣄⢤⣉⠷⢦⣄⣀⠠
-⠐⠾⠿⢽⣷⡶⠶⡿⣓⣭⣾⣿⢷⣬⣓⢿⠿⠿⣯⣉⣁
-⠀⠀⠀⠉⠉⠉⠛⠛⠉⢀⣿⢿⡀⠙⠋⠓⠿⠿⠏⠉⠉
-⠀⠀⠀⠀⠀⠀⠠⠤⠶⠾⢿⡯⠷⠶⠤⠄⠀⠀⠀⠀⠀
-  </pre>
-  <footer>
-    
-    &copy; 2025 X3ALONE. All rights reserved.
-  </footer>
+
+    <div class="auth-container">
+      <h2>Login</h2>
+      <form (ngSubmit)="login()">
+        <input type="text" placeholder="Username" [(ngModel)]="username" name="loginUsername" required>
+        <input type="password" placeholder="Password" [(ngModel)]="password" name="loginPassword" required>
+        <button type="submit">Login</button>
+      </form>
+    </div>
+  </div>
+
+  <div *ngIf="loggedIn()">
+    <h2>Welcome, {{ username }}</h2>
+    <button (click)="logout()">Logout</button>
+  </div>
+
+  <div class="posts">
+    <h2>Posts</h2>
+    <div *ngFor="let post of posts()">
+      <h3>{{ post.title }}</h3>
+      <small>{{ post.date }}</small>
+      <p>{{ post.content }}</p>
+    </div>
+  </div>
 </div>
