--- a/frontend-01blog/src/app/app.component.scss
+++ b/frontend-01blog/src/app/app.component.scss
@@ -8,8 +8,8 @@
 }
 
 body {
-  background: #000000;
-  color: #000000;
+  background: #0aaeee;
+  color: #0aaeee;
   line-height: 1.6;
   font-size: 16px;
   padding: 2rem;
@@ -22,14 +22,14 @@ h1, h2, h3 {
 }
 
 a {
-  color: #000000;
+  color: #0aaeee;
   text-decoration: none;
-  border-bottom: 1px dashed #000000;
+  border-bottom: 1px dashed #0aaeee;
 }
 
 a:hover {
-  background: #333232;
-  color: #3b3b3b;
+  background: #0aaeee;
+  color: #0aaeee;
 }
 
 .container {
@@ -40,7 +40,7 @@ a:hover {
 .post {
   margin-bottom: 3rem;
   padding-bottom: 2rem;
-  border-bottom: 1px dashed #000000;
+  border-bottom: 1px dashed #0aaeee;
 }
 
 .post-title {
@@ -72,6 +72,6 @@ footer {
   margin-top: 4rem;
   font-size: 0.9rem;
   color: #555;
-  border-top: 1px dashed #000000;
+  border-top: 1px dashed #0aaeee;
   padding-top: 1rem;
 }
